[gd_scene load_steps=16 format=3 uid="uid://bgg4ybe3v23rw"]

[ext_resource type="Theme" uid="uid://bm4dl3c55ph6g" path="res://Theme.tres" id="1_jnm2q"]
[ext_resource type="Script" path="res://scenes/items_table/Table.gd" id="2_77u6g"]
[ext_resource type="Script" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="3_t3hwi"]
[ext_resource type="Texture2D" uid="uid://b64os3fad7swk" path="res://textures/eye_hide.png" id="4_ab2fm"]
[ext_resource type="PackedScene" uid="uid://c2v8yme3btu6f" path="res://scenes/items_table/elements/table_item.tscn" id="4_uhjrh"]
[ext_resource type="PackedScene" uid="uid://cfy5dp4a3v7on" path="res://scenes/items_table/SettingsPane.tscn" id="5_kyjag"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwxes"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65mrd"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w4jkl"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_acpqm"]
bg_color = Color(0.211765, 0.211765, 0.211765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ge0i3"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vywr4"]
line_spacing = 0.0
font_size = 10
font_color = Color(1, 1, 1, 0.39)

[sub_resource type="Animation" id="Animation_k5w7q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingPane:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 560)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TablePane:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SettingPane:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_6qho4"]
resource_name = "switch"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingPane:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 560), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TablePane:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SettingPane:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.95, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lssyq"]
_data = {
"RESET": SubResource("Animation_k5w7q"),
"switch": SubResource("Animation_6qho4")
}

[node name="Table" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_jnm2q")
script = ExtResource("2_77u6g")

[node name="TablePane" type="Panel" parent="."]
custom_minimum_size = Vector2(350, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 1
metadata/_edit_vertical_guides_ = [325.0]

[node name="VBoxContainer" type="VBoxContainer" parent="TablePane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="TablePane/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LinkUpdate" type="LinkButton" parent="TablePane/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/font_pressed_color = Color(0.6, 0.6, 0.6, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Доступна новая версия! ({version})"
underline = 1

[node name="Header" type="MarginContainer" parent="TablePane/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10

[node name="SearchContainer" type="HBoxContainer" parent="TablePane/VBoxContainer/Header"]
layout_mode = 2

[node name="SearchField" type="LineEdit" parent="TablePane/VBoxContainer/Header/SearchContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "фывфывфыв"
placeholder_text = "Поиск..."
select_all_on_focus = true
caret_blink = true
caret_blink_interval = 0.5

[node name="SortOption" type="OptionButton" parent="TablePane/VBoxContainer/Header/SearchContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
toggle_mode = false
alignment = 1
text_overrun_behavior = 3
icon_alignment = 2
item_count = 1
selected = 0
popup/item_0/text = "Тип сортировки"
popup/item_0/id = 1

[node name="ButtonShowHidden" type="Button" parent="TablePane/VBoxContainer/Header/SearchContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_pwxes")
theme_override_styles/hover = SubResource("StyleBoxFlat_pwxes")
theme_override_styles/pressed = SubResource("StyleBoxFlat_65mrd")
toggle_mode = true
icon = ExtResource("4_ab2fm")
expand_icon = true

[node name="TableContainer" type="MarginContainer" parent="TablePane/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="TablePane/VBoxContainer/TableContainer"]
clip_contents = true
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"PanelGray"

[node name="VBoxContainer" type="VBoxContainer" parent="TablePane/VBoxContainer/TableContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="SmoothScrollContainer2" type="ScrollContainer" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
script = ExtResource("3_t3hwi")

[node name="MarginContainer" type="MarginContainer" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ItemsContainer" type="VBoxContainer" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
metadata/_edit_group_ = true

[node name="TableItem" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem2" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
modulate = Color(1, 1, 1, 0.701961)
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem3" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem4" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem5" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem6" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem7" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem8" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem9" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem10" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem11" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem12" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem13" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem14" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem15" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem16" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem17" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem18" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem19" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem20" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem21" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="TableItem22" parent="TablePane/VBoxContainer/TableContainer/Panel/VBoxContainer/SmoothScrollContainer2/MarginContainer/ItemsContainer" instance=ExtResource("4_uhjrh")]
layout_mode = 2
metadata/_edit_vertical_guides_ = [298.0]
metadata/_edit_horizontal_guides_ = [40.0]

[node name="Footer" type="Panel" parent="TablePane/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TablePane/VBoxContainer/Footer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TablePane/VBoxContainer/Footer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="ButtonRefresh" type="Button" parent="TablePane/VBoxContainer/Footer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_w4jkl")
theme_override_styles/hover = SubResource("StyleBoxFlat_acpqm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ge0i3")
text = "Обновить"

[node name="ButtonSettings" type="Button" parent="TablePane/VBoxContainer/Footer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_w4jkl")
theme_override_styles/hover = SubResource("StyleBoxFlat_acpqm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ge0i3")
disabled = true
text = "Настройки"

[node name="ButtonAddLog" type="Button" parent="TablePane/VBoxContainer/Footer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Должно содержаться в буфере обмена"
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_w4jkl")
theme_override_styles/hover = SubResource("StyleBoxFlat_acpqm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ge0i3")

[node name="VBoxContainer" type="VBoxContainer" parent="TablePane/VBoxContainer/Footer/HBoxContainer/ButtonAddLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="TablePane/VBoxContainer/Footer/HBoxContainer/ButtonAddLog/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 0
text = "Вставить логи"
horizontal_alignment = 1

[node name="LabelDesc" type="Label" parent="TablePane/VBoxContainer/Footer/HBoxContainer/ButtonAddLog/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 0
text = "(из буфера)"
label_settings = SubResource("LabelSettings_vywr4")
horizontal_alignment = 1

[node name="SettingPane" parent="." instance=ExtResource("5_kyjag")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
offset_bottom = 560.0
grow_vertical = 0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_lssyq")
}
